--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: test_screen
 description: Library for screen UI testing
-version: 0.2.2
-homepage:
+version: 1.0.0
+homepage: https://github.com/dumabg/test_screen
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -12,9 +12,7 @@ dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
-  meta:
-    sdk: flutter
-  intl: ^0.17.0
+  meta: ^1.7.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
