--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ description: Library for screen UI testing for multiple locales, platforms and d
 version: 1.0.1
 repository: https://github.com/dumabg/test_screen 
 homepage: https://github.com/dumabg/test_screen
+#TODO: Remove this when publish to pub
+publish_to: none
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -14,6 +16,9 @@ dependencies:
   flutter_test:
     sdk: flutter
   meta: ^1.7.0
+  #TODO: Change this when push on pub.dev  
+  ui_target_platform:
+    git: https://github.com/dumabg/ui_target_platform
 
 dev_dependencies:
   flutter_lints: ^2.0.1
