--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,24 @@
 name: test_screen
 description: Library for screen UI testing for multiple locales, platforms and devices, with different states of the same screen.
-version: 1.1.0
+version: 1.1.1
 repository: https://github.com/dumabg/test_screen 
 homepage: https://github.com/dumabg/test_screen
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.18.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_test:
     sdk: flutter
+  intl: ^0.17.0
   meta: ^1.7.0
   ui_target_platform: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
+  dart_code_metrics: ^5.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
