Simulate web environment for all platforms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "gcloud",
         "goldens",
         "Goldens",
+        "linux",
         "precache",
         "pubspec",
         "Roboto"
