--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: test_screen
 description: Library for screen UI testing for multiple locales, platforms and devices, with different states of the same screen.
-version: 1.1.1
+version: 2.0.0
 repository: https://github.com/dumabg/test_screen 
 homepage: https://github.com/dumabg/test_screen
+publish_to: none
 
 environment:
   sdk: ">=2.18.2 <3.0.0"
@@ -14,7 +15,8 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   meta: ^1.7.0
-  ui_target_platform: ^1.1.0
+  isweb_test:   
+    path: /D/Projectes/lib/flutter/isWeb_test
 
 dev_dependencies:
   flutter_lints: ^2.0.1
