Pubspec isweb_test dependency

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,8 +29,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  isweb_test:   
-    path: /D/Projectes/lib/flutter/isWeb_test
+  isweb_test: 1.0.0  
 
 dev_dependencies:
   flutter_test:
