--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
+  intl: any
   isweb_test: 1.0.0  
 
 dev_dependencies:
