--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
-  intl: ^0.17.0
+  intl: any
   isweb_test: ^1.0.0
   meta: ^1.8.0
 
