Analysis options more strict & correct errors and warnings

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "cSpell.words": [
+        "Besalduch",
         "cupertino",
         "gcloud",
         "goldens",
         "Goldens",
+        "isweb",
         "linux",
+        "overridable",
         "precache",
         "pubspec",
-        "Roboto"
+        "Roboto",
+        "testscreen"
     ]
 }
