--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -11,6 +11,8 @@
         "precache",
         "pubspec",
         "Roboto",
-        "testscreen"
+        "testscreen",
+        "vsix",
+        "VSIX"
     ]
 }
