--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,34 +9,15 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
-
 # https://dart.dev/guides/language/analysis-options
 analyzer:
+  exclude: [
+    "lib/l10n"
+  ]
   language:
     strict-casts: true
+    strict-inference: true
     strict-raw-types: true
-  plugins:
-    - dart_code_metrics
-
-# https://dartcodemetrics.dev/docs/getting-started/configuration
-dart_code_metrics:
-  metrics:
-    cyclomatic-complexity: 20 #cspell:disable-line
-    number-of-parameters: 4
-    maximum-nesting-level: 5
-  metrics-exclude:
-    - test/**
-  rules:
-    - no-boolean-literal-compare
-    - no-empty-block
-    - prefer-conditional-expressions
-    - no-equal-then-else
-    - avoid-late-keyword    
-    - prefer-last
-    - prefer-correct-type-name
-    - prefer-async-await
-    - avoid-wrapping-in-padding
-  anti-patterns:
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -53,7 +34,57 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-    unnecessary_late: true
+    prefer_final_locals: true
+    prefer_final_in_for_each: true
+    cancel_subscriptions: true
+    discarded_futures: true
+    no_self_assignments: true
+    no_wildcard_variable_uses: true
+    prefer_void_to_null: true
+    unnecessary_statements: true
+    # Style rules
+    always_declare_return_types: true
+    always_put_control_body_on_new_line: true
+    always_put_required_named_parameters_first: true
+    avoid_annotating_with_dynamic: true
+    avoid_double_and_int_checks: true
+    avoid_escaping_inner_quotes: true
+    avoid_field_initializers_in_const_classes: true #cSpell: disable-line
+    avoid_final_parameters: true
+    avoid_multiple_declarations_per_line: true
+    avoid_redundant_argument_values: true
+    avoid_returning_this: true
+    avoid_unused_constructor_parameters: true
+    cascade_invocations: true
+    cast_nullable_to_non_nullable: true
+    combinators_ordering: true  #cSpell: disable-line
+    directives_ordering: true
+    do_not_use_environment: true
+    flutter_style_todos: true
+    join_return_with_assignment: true
+    leading_newlines_in_multiline_strings: true
+    lines_longer_than_80_chars: true
+    matching_super_parameters: true
+    no_literal_bool_comparisons: true
+    noop_primitive_operations: true
+    parameter_assignments: true
+    prefer_int_literals: true
+    sized_box_shrink_expand: true
+    unawaited_futures: true #cSpell: disable-line
+    unnecessary_await_in_return: true
+    unnecessary_breaks: true
+    unnecessary_lambdas: true
+    unnecessary_parenthesis: true
+    unnecessary_raw_strings: true
+    unreachable_from_main: true
+    use_colored_box: true
+    use_decorated_box: true
+    use_enums: true
+    use_is_even_rather_than_modulo: true
+    use_named_constants: true
+    use_raw_strings: true
+    use_string_buffers: true
+    use_to_and_as_if_applicable: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
