--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,15 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
-        }
+        },
+        {
+            "name": "Create screens",
+            "request": "launch",
+            "type": "dart",
+            "codeLens": {
+                "for": ["run-test", "run-test-file"]
+            },
+            "args": ["--update-goldens"]
+        },
     ]
 }
